--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "elm-webpack-starter",
   "description": "Webpack setup for writing Elm apps",
-  "version": "0.8.3",
+  "version": "0.8.7",
   "license": "MIT",
   "author": "Peter Morawiec",
   "repository": {
@@ -10,7 +10,8 @@
   },
   "scripts": {
     "start": "webpack-dev-server --progress --colors --content-base src --inline --hot",
-    "build": "rimraf dist && webpack && mv dist/*.eot dist/static/css/ && mv dist/*.woff* dist/static/css/ && mv dist/*.svg dist/static/css/ && mv dist/*.ttf dist/static/css/",
+    "build": "rimraf dist && webpack",
+    "deploy": "npm run build && npm version patch && gulp deploy",
     "reinstall": "npm i rimraf && rimraf node_modules && npm uninstall -g elm && npm i -g elm && npm i && elm package install"
   },
   "devDependencies": {
@@ -23,7 +24,13 @@
     "elm-webpack-loader": "^4.1.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
+    "gulp": "^3.9.1",
+    "gulp-gh-pages": "^0.5.4",
+    "gulp-htmlmin": "^3.0.0",
+    "html-loader": "^0.4.4",
+    "html-minifier": "^3.2.3",
     "html-webpack-plugin": "^2.17.0",
+    "inquirer-confirm": "^0.2.2",
     "jquery": "^3.1.0",
     "node-sass": "^4.2.0",
     "postcss-loader": "^1.1.1",
